# mkdocs-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.dev  README.md  config.yml  mkdocs-build.sh  mkdocs-lint.sh  mkdocs-serve.sh  requirements.txt  todo.md  zensical-serve.sh
.github/workflows/: docker-publish.yml
assets/: katex.render.js
example/export-20260304/: 1.md  2.md  3.md  4.md  README.md
images/: example_workflow.yml
images/exporter/: Dockerfile  README.md  example_workflow.yml  pyproject.toml  requirements.txt
images/exporter-build/: .dockerignore  .puppeteerrc.cjs  Dockerfile  package-lock.json  package.json  pyproject.toml
images/exporter-puppeteer/: .dockerignore  .puppeteerrc.cjs  Dockerfile  package-lock.json  package.json
images/exporter-texlive/: .dockerignore  Dockerfile  ci-cleanup.sh  cleanup.sh
images/exporter/scripts/: export.py  generate.py  mlib_download.py  out_matrix.py  template.yml  utils.py
images/exporter/templates/: main.css  print_fix.css  template.yml
images/fragment/: .dockerignore  Dockerfile  requirements.txt
images/mkdocs/: .dockerignore  Dockerfile  README.md  gulpfile.js  package.json  pyproject.toml  requirements.txt
images/mkdocs/scripts/: generate.fragment.py  generate.py  generate.serve.py  utils.py
images/mkdocs/templates/: template.serve.yml  template.yml  templates.fragment.yml
posthtml/: gulpfile.js  package.json
scripts/: generate.py  generate.serve.py  generate.x.py  install_katex.py  seo_pusher.py  template.dev.yml  template.serve.yml  template.x.yml  template.yml
(+25 files in other folders)
